--- a/app/views/companys/index.html.erb
+++ b/app/views/companys/index.html.erb
@@ -1,16 +1,16 @@
-<h1>Hola mundo</h1>
 
+<%= render 'navbar' %>
+<h1>Hola mundo</h1>
 <%= render 'form' %>
 
 
 <div class="row">
 <div id='caja' class='col col-ml-8'>
 <% @companys.each do |c| %>
-<li>
+<li id='<%= c.id%>'>
     <%= c.name %>
-    <%= lint_to '', root_path %>
-    <% end %>
-    
+    <%= link_to 'Detalle', root_path %>
+    <% end %>  
 </li>
 </div>
 </div>
