--- a/app/views/companys/_navbar.html.erb
+++ b/app/views/companys/_navbar.html.erb
@@ -5,8 +5,12 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto">
-      <a class="nav-item nav-link active" href="<%= new_user_session_path %>">Inicio de Sesion <span class="sr-only">(current)</span></a>
+    <% if user_signed_in? %>
       <a class="nav-item nav-link" href="<%= destroy_user_session_path %>" data-method='DELETE'>Salir</a>
+    <% else %>
+      <a class="nav-item nav-link active" href="<%= new_user_session_path %>">Inicio de Sesion <span class="sr-only">(current)</span></a>
+      <% end %>
+      
     </div>
   </div>
 </nav>
