--- a/app/views/companys/index.html.erb
+++ b/app/views/companys/index.html.erb
@@ -9,7 +9,9 @@
 <% @companys.each do |c| %>
 <li id='<%= c.id%>'>
     <%= c.name %>
-    <%= link_to 'Detalle', root_path %>
+    <%= link_to 'ver', company_path(c), data:{remote: true} %>
+    <%= link_to 'editar', edit_company_path(c), data:{remote: true} %>
+    
     <% end %>  
 </li>
 </div>
