--- a/app/views/companys/create.js.erb
+++ b/app/views/companys/create.js.erb
@@ -1,2 +1,2 @@
 alert('Empresa ha sido creada con exito');
-$('#caja').append('<%= j @companys.name %>');
+$('#caja').append("<%= @companys.name %>");
